# RawCam

./: readme.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/rawcamdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  archiver.cpp  huff.cpp  huff.h  vector_bool.h
app/src/main/java/com/example/rawcamdemo/: CameraFragment.java  CustomView.java  ImageSaver2.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  fragment_main.xml  spinner_dropdown_item.xml  spinner_item.xml
app/src/main/res/layout-land/: fragment_main.xml
app/src/main/res/mipmap-anydpi-v26/: btn_photo.xml  btn_recording.xml  btn_sound_off.xml  btn_sound_on.xml  btn_video.xml
app/src/main/res/values/: btn_photo_background.xml  btn_recording_background.xml  btn_sound_off_background.xml  btn_sound_on_background.xml  btn_video_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rawcamdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
